# gt-arcade-kontrol-io-board-v001-test

./: CMakeLists.txt
.github/workflows/: main.yml
src/: main.c  tusb_config.h  usb_descriptors.c
tools/: BASLANGICA_EKLE.bat  PYTHON_MODUL_KUR.bat
